--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>ICD-10 Coding - AMIA 2019</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Have ICD-10 Coding Practices Changed Since 2015?">
+		<meta name="author" content="John Borsi">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -43,7 +43,7 @@
 			<div class="slides">
 				<section>
 					<section>
-						<h2>Have ICD-10 Coding Practices Changed Since 2015?</h2>
+						<h2 style="color:darkred">Have ICD-10 Coding Practices Changed Since 2015?</h2>
 						<h3>S35: Phenotyping Methods</h3>
 					</section>
 					<section>
