major section headings

--- a/index.html
+++ b/index.html
@@ -58,10 +58,21 @@
 
 				<section>
 					<section>
-						<h2>Presentation</h2>
-						<p>TKTK</p>
+						<h2>History of the ICD-10 Transition</h2>
 					</section>
 				</section>
+
+                <section>
+                    <section>
+                        <h2>Second-order Coding Effects</h2>
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <h2>Implications &amp; Recommendations</h2>
+                    </section>
+                </section>
 
 				<section>
 					<h2>Thank you!</h2>
