icd gem crosswalk slide

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
                         <h3>Crosswalks &amp; Translations</h3>
                     </section>
                     <section>
+                        <img src="images/icd_gems.png" height="550" width="523" style="border:0px">
+                        <p align="right" style="font-size:12px">
+                            Boyd AD, Li J, Burton MD, Jonen M, Gardeux V, Achour I, et al. <br>
+                            The discriminatory cost of ICD-10-CM transition between clinical specialties: metrics, case study, and mitigating tools. <br> 
+                            J AMIA. 2013 Jul;20(4):708-17.
+                        </p>
+                    </section>
+                    <section>
                         <h3>Granularity, Laterality, &amp; Specificity</h3>
                     </section>
 				</section>
