icd gem speaker notes

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                             The discriminatory cost of ICD-10-CM transition between clinical specialties: metrics, case study, and mitigating tools. <br> 
                             J AMIA. 2013 Jul;20(4):708-17.
                         </p>
+                        <aside class="notes">
+                            This image illustrates the complexity of ICD-9 to ICD-10 crosswalks and why many practictioners and coders could be rightly intimidated by the transition.
+                        </aside>
                     </section>
                     <section>
                         <h3>Granularity, Laterality, &amp; Specificity</h3>
