example code table

--- a/index.html
+++ b/index.html
@@ -76,6 +76,63 @@
                     <section>
                         <h3>Granularity, Laterality, &amp; Specificity</h3>
                     </section>
+                    <section>
+                        <h5> Example: Salmonella Infections </h5>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Header</th>
+                                    <th>Code</th>
+                                    <th></th>
+                                    <th>Flag</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>A02.2</td>
+                                    <td>A02.20</td>
+                                    <td>Unspecified</td>
+                                    <td><b>unspecified</b></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>A02.21</td>
+                                    <td>Meningitis</td>
+                                    <td>non-novel</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>A02.22</td>
+                                    <td>Pneumonia</td>
+                                    <td>non-novel</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>A02.23</td>
+                                    <td>Arthritis</td>
+                                    <td>non-novel</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>A02.24</td>
+                                    <td>Osteomyelitis</td>
+                                    <td>non-novel</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>A02.25</td>
+                                    <td>Pyelonephritis</td>
+                                    <td><b>novel</b></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>A02.29</td>
+                                    <td>Other localized infection</td>
+                                    <td><b>other</b></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
 				</section>
 
                 <section>
