formatting example table

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr style="background-color: lightgoldenrodyellow">
                                     <td>A02.2</td>
                                     <td>A02.20</td>
                                     <td>Unspecified</td>
@@ -118,16 +118,16 @@
                                     <td>Osteomyelitis</td>
                                     <td>non-novel</td>
                                 </tr>
-                                <tr>
+                                <tr style="background-color: lightgoldenrodyellow">
                                     <td></td>
                                     <td>A02.25</td>
                                     <td>Pyelonephritis</td>
                                     <td><b>novel</b></td>
                                 </tr>
-                                <tr>
+                                <tr style="background-color: lightgoldenrodyellow">
                                     <td></td>
                                     <td>A02.29</td>
-                                    <td>Other localized infection</td>
+                                    <td>Other infection</td>
                                     <td><b>other</b></td>
                                 </tr>
                             </tbody>
