added icd hierarchy example

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
                     </section>
                     <section>
                         <h3>Coding Volume</h3>
-                        <img class="fragment" src="images/ha-readmit.png">
+                        <img src="images/ha-readmit.png">
+                        <aside class="notes">Not covered by our work, coding volume is another confounding factor to be aware of when conducting longitudinal analyses. The linked study reports a case where a change in transaction standards erroneously indicated a change in risk-adjusted readmission rates.</aside>
                     </section>
                 </section>
 
@@ -159,6 +160,10 @@
                         <blockquote>
                             <b>1.</b> When applicable, group related codes together &mdash; and validate your groups.
                         </blockquote>
+                        <img src="images/icd10_hierarchy.png" style="border: 0px">
+                        <p align="right" style="font-size: 10px">
+                            Ning, W., Yu, M. & Zhang, R. <br> A hierarchical method to automatically encode Chinese diagnoses through semantic similarity estimation. <br> BMC Med Inform Decis Mak 16, 30 (2016)
+                        </p>
                     </section>
                     <section>
                         <blockquote>
