--- a/index.html
+++ b/index.html
@@ -45,29 +45,42 @@
 					<section>
 						<h2 style="color:darkred">Have ICD-10 Coding Practices Changed Since 2015?</h2>
 						<h3>S35: Phenotyping Methods</h3>
+                        <small>
+                            <b>John Borsi</b>, IBM Watson Health
+                        </small>
 					</section>
 					<section>
 						<h2>Disclosure</h2>
+                        I am employed by IBM
 					</section>
 					<section>
 						<h2>Learning Objectives</h2>
-
+                        <ul>
+                            <li>Talk about shifts in coding practices</li>
+                            <li>Identify shifts from data</li>
+                            <li>Harden analytics against this drift</li>
+                        </ul>
 					</section>
 				</section>
 
 				<section>
 					<section>
 						<h2>History of the ICD-10 Transition</h2>
+                        <ul>
+                            <li>Necessary modernization 📈 or potential disaster 🔥?</li>
+                            <li>Delayed implementation, reduced enforcement mechanisms</li>
+                            <li>Significant education and implementation costs.</li>
+                        </ul>
 					</section>
                     <section>
-                        <h3>Crosswalks &amp; Translations</h3>
-                    </section>
-                    <section>
-                        <img src="images/icd_gems.png" height="550" width="523" style="border:0px">
+                        <figure>
+                            <img src="images/icd_gems.png" height="550" width="523" style="border:0px">
+                            <figcaption>
+                                Network analysis of ICD-9 to ICD-10 mapping
+                            </figcaption>
+                        </figure>
                         <p align="right" style="font-size:12px">
-                            Boyd AD, Li J, Burton MD, Jonen M, Gardeux V, Achour I, et al. <br>
-                            The discriminatory cost of ICD-10-CM transition between clinical specialties: metrics, case study, and mitigating tools. <br> 
-                            J AMIA. 2013 Jul;20(4):708-17.
+                            Boyd AD, Li J, Burton MD et al. JAMIA (2013)
                         </p>
                         <aside class="notes">
                             This image illustrates the complexity of ICD-9 to ICD-10 crosswalks and why many practictioners and coders could be rightly intimidated by the transition.
@@ -141,6 +154,11 @@
                     </section>
                     <section>
                         <h3>Learning Curves</h3>
+                        <ul>
+                            <li>Improved Accuracy Over Time 🇨🇭(Januel et al, 2011)</li>
+                            <li>Training Improves Coding 🇿🇦 (Dyers et al, 2017) </li>
+                            <li>Opportunities for Improvement 🇺🇸 (Romano & Hovey, 2016)</li>
+                        </ul>
                     </section>
                     <section>
                         <h3>Seasonality</h3>
