first draft done

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 					<section>
 						<h2>History of the ICD-10 Transition</h2>
                         <ul>
-                            <li>Necessary modernization 📈 or potential disaster 🔥?</li>
-                            <li>Delayed implementation, reduced enforcement mechanisms</li>
-                            <li>Significant education and implementation costs.</li>
+                            <li>Necessary modernization 📈 or looming disaster 🔥?</li>
+                            <li>Delayed implementation 📅 & enforcement 👮🏾‍♀️</li>
+                            <li>Education 👩🏻‍🏫 and implementation costs 💰 </li>
                         </ul>
 					</section>
                     <section>
@@ -157,16 +157,154 @@
                         <ul>
                             <li>Improved Accuracy Over Time 🇨🇭(Januel et al, 2011)</li>
                             <li>Training Improves Coding 🇿🇦 (Dyers et al, 2017) </li>
-                            <li>Opportunities for Improvement 🇺🇸 (Romano & Hovey, 2016)</li>
+                            <li>Opportunities for Improvement 🇺🇸 <br>(Romano & Hovey, 2016)</li>
                         </ul>
+                    </section>
+                    <section>
+                        <figure>
+                            <img src="images/M25_51 graph.png" style="border:0px">
+                            <figcaption>Yes, we observe learning curves since 2015</figcaption>
+                        </figure>
+                    </section>
+                    <section>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Header</th>
+                                    <th>Description</th>
+                                    <th>Type</th>
+                                    <th>Δ %</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>M25.51</td>
+                                    <td>Pain in shoulder</td>
+                                    <td>Laterality</td>
+                                    <td>+8.4%</td>
+                                </tr>
+                                <tr>
+                                    <td>M25.55</td>
+                                    <td>Pain in hip</td>
+                                    <td>Laterality</td>
+                                    <td>+8.9%</td>
+                                </tr>
+                                <tr>
+                                    <td>M25.56</td>
+                                    <td>Pain in knee</td>
+                                    <td>Laterality</td>
+                                    <td>+7.0%</td>
+                                </tr>
+                                <tr>
+                                    <td>M79.60</td>
+                                    <td>Pain in limb</td>
+                                    <td>Laterality</td>
+                                    <td>+9.7%</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                    <section>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Header</th>
+                                    <th>Description</th>
+                                    <th>Type</th>
+                                    <th>Δ %</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>I25</td>
+                                    <td>CHD</td>
+                                    <td>Granularity</td>
+                                    <td>+5.8%</td>
+                                </tr>
+                                <tr>
+                                    <td>Z12.3</td>
+                                    <td>Mammograms</td>
+                                    <td>Granularity</td>
+                                    <td>+9.9%</td>
+                                </tr>
+                                <tr>
+                                    <td>R09.8</td>
+                                    <td>Resp. Symptoms</td>
+                                    <td>Granularity</td>
+                                    <td>+7.2%</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </section>
                     <section>
                         <h3>Seasonality</h3>
                     </section>
                     <section>
+                        <figure>
+                            <img src="images/combined.png" style="border:0px">
+                            <figcaption>Need to correct for seasonal allergies</figcaption>
+                        </figure>
+                    </section>
+                    <section>
                         <h3>Coding Volume</h3>
                         <img src="images/ha-readmit.png">
-                        <aside class="notes">Not covered by our work, coding volume is another confounding factor to be aware of when conducting longitudinal analyses. The linked study reports a case where a change in transaction standards erroneously indicated a change in risk-adjusted readmission rates.</aside>
+                        <aside class="notes">Coding volume is another confounding factor to be aware of when conducting longitudinal analyses. The linked study reports a case where a change in transaction standards erroneously indicated a change in risk-adjusted readmission rates.</aside>
+                    </section>
+                    <section>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Header</th>
+                                    <th>Description</th>
+                                    <th>Type</th>
+                                    <th>Δ %</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>M17.1</td>
+                                    <td>Osteoarthritis</td>
+                                    <td>Laterality</td>
+                                    <td>-3.7%</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                    <section>
+                        <h3>Uncovered Clinical Content</h3>
+                        <img src="images/icd10_updates.png">
+                    </section>
+                    <section>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Header</th>
+                                    <th>Description</th>
+                                    <th>Type</th>
+                                    <th>Δ %</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>E11.6</td>
+                                    <td>Type 2 DM</td>
+                                    <td>Granularity</td>
+                                    <td>-10.8%</td>
+                                </tr>
+                                <tr>
+                                    <td>Z79.81</td>
+                                    <td>Drug Use</td>
+                                    <td>Granularity</td>
+                                    <td>-2.8%</td>
+                                </tr>
+                                <tr>
+                                    <td>D50.1</td>
+                                    <td>Iron deficiency</td>
+                                    <td>Other</td>
+                                    <td><center>&mdash;</center></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </section>
                 </section>
 
@@ -180,24 +318,37 @@
                         </blockquote>
                         <img src="images/icd10_hierarchy.png" style="border: 0px">
                         <p align="right" style="font-size: 10px">
-                            Ning, W., Yu, M. & Zhang, R. <br> A hierarchical method to automatically encode Chinese diagnoses through semantic similarity estimation. <br> BMC Med Inform Decis Mak 16, 30 (2016)
+                            Ning, W., Yu, M. & Zhang, R. (2016)
                         </p>
                     </section>
                     <section>
                         <blockquote>
                             <b>2.</b> Retrain models regularly, including feature selection.
                         </blockquote>
+                        <img src="images/calibration_curves.png" style="border: 0px">
+                        <p align="right" style="font-size: 10px">
+                            Davis, SE, Greevy RA, Fonnesbeck C et al (2019)
+                        </p>
                     </section>
                     <section>
                         <blockquote>
                             <b>3.</b> When using risk-adjusted measures, consider validating &amp; adjusting for coding volume.
                         </blockquote>
+                        <img src="images/stacks.jpg">
                     </section>
                 </section>
 
 				<section>
-					<h2>Thank you!</h2>
-					<h3>Contact Information: </h3>
+                    <h3>Summary</h3>
+                    <ul> 
+                        <li>Codeset transitions produce learning curves</li>
+                        <li>Use related code groups to identify trends</li>
+                        <li>Follow best practices to avoid model drift</li>
+                    </ul>
+
+                    <p style="margin-top: 3cm;">
+					   <b><i>jborsi@us.ibm.com, @jpborsi</i></b>
+                    </p>
 				</section>
 
 			</div>
