--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
                     </ul>
 
                     <p style="margin-top: 3cm;">
-					   <b><i>jborsi@us.ibm.com, @jpborsi</i></b>
+					   <b><i>jborsi@us.ibm.com, @jpborsi</i></b><br>
+                       <b>Dr. Amanda Yoho, @mandaYoho</b><br>
+                       <b>Srikanth Sivashankaran</b>
                     </p>
 				</section>
 
